# poc-elasticsearch

./: .makim.yaml  .releaserc.json  LICENSE  pyproject.toml
conda/: dev.yaml
containers/: Dockerfile  compose.yaml
containers/esconfig/ca/certs/: http.p12  http_ca.crt  transport.p12
docs/notebooks/: Test_Elasticsearch_4_BiorXiv_2024_JSON.ipynb  test_es_api_from_JSON.ipynb
src/rxiv_rest_api/: __init__.py  app.py
tests/: __init__.py  test_rxiv_rest_api.py
